# sstp-client

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  Portfile  README  TODO  USING  aclocal.m4  config.h.in  configure  configure.ac  sstp-client.spec  sstpc.8
debian/: changelog  control  rules  sstp-client.install  sstp-client.postinst  sstp-client.postrm  sstp-client.preinst  sstp-client.substvars  sstp-client.symbols  watch
debian/patches/: series
include/: Makefile.in  sstp-common.h
src/: Makefile.am  Makefile.in  sstp-buff.c  sstp-chap.c  sstp-client.c  sstp-client.h  sstp-cmac.c  sstp-event.c  sstp-fcs.c  sstp-http.c  sstp-http.h  sstp-option.c  sstp-option.h  sstp-packet.c  sstp-packet.h  sstp-pppd.c  sstp-pppd.h  sstp-private.h  sstp-route.c  sstp-route.h  sstp-state.c  sstp-state.h  sstp-stream.c  sstp-stream.h  sstp-task.c  sstp-util.c  sstp-util.h
src/libsstp-api/: Makefile.am  Makefile.in  sstp-api.c
src/libsstp-compat/: Makefile.in  sstp-compat.c
src/libsstp-log/: Makefile.in  sstp-log-file.c  sstp-log-std.c  sstp-log-syslog.c  sstp-log.c
src/pppd-plugin/: Makefile.in  sstp-plugin.c
